--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -25,10 +25,10 @@ ol, ul{
 	list-style: none;
 }
 .container{
+	position: relative;
 	width: 100%;
 	padding: 0 2px !important;
 	background-color: white;
-	position: relative;
 }
 .logo{
 	border-radius: 5px;
@@ -45,6 +45,7 @@ ol, ul{
 }
 .content{font-size: 0.9em}
 .banner{
+	margin-top: 0 !important;
 	background-image: url(../IMG/banner.jpg);
 	background-position: center center;
 	width: 100%;
@@ -339,7 +340,7 @@ i.fa.fa-bars{
 	
 /*********** CSS menu-mobile screen-600 ************/
 @media only screen and (min-width: 600px){
-	.banner{border-bottom: 2px solid #1D5D6F;
+	.banner{
 		display: block;}
 	.menu-dropdown{
 		max-width: 40%;
@@ -347,6 +348,7 @@ i.fa.fa-bars{
 	}
 	.wrap-content{
 		width: 100%;
+		position: relative;
 	}
 	.menu-mobile p{
 	text-align: center;
@@ -388,10 +390,21 @@ i.fa.fa-bars{
 	}
 }
 /*********** CSS desktop screen-1024px ************/
-@media only screen and (min-width: 1024px){
+@media only screen and (min-width: 1023px){
+	.wrapper-container{
+		position: relative;
+		margin-top: 480px;
+		width: 100%;
+		border-top: 2px solid #1D5D6F;
+		background-color: #fff;
+	}
 	a{font-size: 0.9em}
-	.banner{display: block;
+	.banner{
+		display: block;
 		height: 480px;
+		position: fixed;
+		top:0;
+		left: 0;
 	}
 	.list-banner{
 		width: 94%;
@@ -407,22 +420,70 @@ i.fa.fa-bars{
 		margin-right: 3%;
 		position: relative;
 	}
+	.list-text:hover{
+		cursor: pointer;
+		transform: 
+	}
 	.list .list-text{
 		width: 100%;
 	    height: 15em;
 	    background-color: rgba(0, 223, 0, 0.6);
 	    border-radius: 50%;
 	}
-
+	.list-text img{
+		width: 70%;
+		margin-left: 14%;
+		margin-top: 2%;
+	}
+	@keyframes rote-img{
+		0% {
+	    transform: rotateZ(25deg);
+		}
+		33% {
+		    transform: rotateZ(0deg);
+		}
+		66% {
+		    transform: rotateZ(-25deg);
+		}
+		100% {
+		    transform: rotateZ(0deg);
+		}
+	}
+	.list-text:hover .img-item{animation: rote-img 0.5s ease;}
+	
+	.list-text p {
+		text-align: center;
+	    padding-left: 3%;
+	    margin-top: 20px;
+	    font-size: 1.2em;
+	    color: rgba(30, 20, 30, 1);;
+	}
+	.list:nth-child(1) .list-text img{
+		width: 50%;
+		margin-left: 24%;
+	}
 	.list:nth-child(1){
 		width: 23%;
 		height: 20em;
+		animation: banner-ani ease 0.8s 0.2s;
 	}
 	.list:nth-child(1) .list-text{
 		width: 100%;
 		height: 19em;
 		background-color: rgba(249, 250, 87, 0.8);
 		border-radius: 50%;
+	}
+	.list:nth-child(1) .list-text .name{
+		font-size: 1.2em;
+	    font-weight: bold;
+	    color: lightcoral;
+	}
+	.list-text .slogan {
+		font-size: 1em;
+		text-align: center;
+	    padding-left: 7%;
+	    width: 90%;
+	    color: black;
 	}
 	.list:nth-child(1) .list-text::after{ 
 		border: solid transparent;
@@ -445,21 +506,40 @@ i.fa.fa-bars{
 	}
 	.list:nth-child(2){
 		margin-top: 180px;
+		animation: banner-ani ease 0.8s 0.6s;
 	}
 	.list:nth-child(3){
 		margin-top: 10px;
+		animation: banner-ani ease 0.8s 0.4s;
 	}
 	.list:nth-child(4){
 		margin-top: 170px;
+		animation: banner-ani ease 0.8s 1s;
 	}
 	.list:nth-child(5){
 		margin-top: 15px;
+		animation: banner-ani ease 0.8s 0.8s;
 	}
-
+	
+	@keyframes banner-ani{
+		0% {
+	    opacity: 0;
+	    transform: translate(0px,-55px);
+		}
+		6% {
+		    opacity: 0.04;
+		    transform: translate(0px,-55px);
+		}
+		100% {
+		    opacity: 1;
+		    transform: translate(0px,0px);
+		}
+	}
 	.menu-1024{display: block;}
 	.container{
 		width: 100% !important;
-		margin: 0 auto !important;
+		margin-left: auto !important;
+		margin-right: auto !important;
 	}
 	.wrap-content{
 		width: 75%;
@@ -642,6 +722,13 @@ i.fa.fa-bars{
 		margin-top: 10px;
 		position: relative;
 	}
+	.search-fixed{
+		position: fixed;
+		top: -8px;
+		right: 5.5%;
+		width: 21.9%;
+		z-index: 3;
+	}
 	.row{
 		display: flex;
 		flex-direction: column;
@@ -714,11 +801,11 @@ i.fa.fa-bars{
 	}
 }
 
-
 @media only screen and (min-width: 1280px){
 	.container{
 		width: 1200px !important;
-		margin: 0 auto !important;
+		margin-left: auto !important;
+		margin-right: auto !important;
 	}
 	a{font-size: 1em}
 	.sign button {
