--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -84,15 +84,14 @@ ol, ul{
 .image-new{
 	width: 25%;
 	height: 145px;
-	border: 1px solid black;
 	float: left;
 }
-.image-new img{width: 100%;}
+.image-new img{width: 100%;
+height: 145px;}
 .new{
 	width: 75%;
 	height: 145px;
 	padding-left: 15px;
-	border: 1px solid black;
 	float: right;
 	position: relative;
 }
@@ -109,6 +108,15 @@ ol, ul{
 .new-title h4:hover{
 	cursor: pointer;
 	color: #4CAF50;
+}
+#new-content-detail h3{
+	color: #4CAF50;
+	margin-top: 10px;
+}
+.news-content{
+	margin-bottom: 20px;
+	border: 1px solid #4CAF50;
+	padding: 10px;
 }
 /*option tab tin tức*/
 
@@ -139,9 +147,7 @@ img.avatar {
 	width: 160px !important;
 }
 		/********Css form*********/
-form {
-    border: 3px solid #f1f1f1;
-}
+
 .container .form{
 	width: 560px !important;
 }
