--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -161,7 +161,17 @@ height: 145px;}
 	cursor: pointer;
 }
 #forgot-pass:hover a{color: red;}
-
+/*option thông tin đăng ký thành công*/
+.home{
+	width: 200px;
+	height: 50px;
+	color: white;
+	border-radius: 7px;
+	float: right;
+}
+.info{
+	color: #4CAF50;
+}
 /*option form thong tin ca nhan*/
 #form_thong_tin_ca_nhan{
 	border: none;
@@ -193,7 +203,7 @@ img.avatar {
 .container .form{
 	width: 560px !important;
 }
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
