--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -642,6 +642,9 @@ i.fa.fa-bars{
 		cursor: pointer;
 		transform: 
 	}
+	.list-text:active .img-item{
+		transform: scale(1.3);
+	}
 	.list .list-text{
 		width: 100%;
 	    height: 15em;
@@ -823,7 +826,9 @@ i.fa.fa-bars{
 		float: left;
 		border-bottom: 2px solid white;
 	}
-	
+	.menu-1024 .item:hover{
+		cursor: pointer;
+	}
 	.menu-1024 .item:nth-child(6){
 		width: 9% !important;
 	}
