--- a/Du_anTN/CSS/start-page.css
+++ b/Du_anTN/CSS/start-page.css
@@ -15,6 +15,10 @@ body{
 	background-color: white;
 	font-size: 16px;
 }
+ul li{
+	list-style-type: none;
+}
+p{display: inline-block;}
 .clear{clear: both;}
 .wrapper{
 	width: 1200px;
@@ -31,7 +35,7 @@ body{
 	width: 450px;
 	position: absolute;
     left: 18%;
-    top: -5px;
+    top: 0px;
     transition: opacity ease 1s 1.5s;
 	animation: slogan-ani ease 1s 1.5s;
 }
@@ -40,7 +44,7 @@ body{
 	width: 450px;
 	position: absolute;
     left: 19%;
-    top: 45px;
+    top: 50px;
     transition: opacity ease 1s 2s;
 	animation: slogan-ani ease 1s 2s;
 }
@@ -68,7 +72,7 @@ body{
 	position: absolute;
 	opacity: 0;
 	top: 350px;
-    left: 5%;
+    left: 2%;
     width: 200px;
     height: 190px;
 	transition: opacity ease 1s 3s;
@@ -78,7 +82,7 @@ body{
 	position: absolute;
 	opacity: 0;
 	top: 102px;
-    left: 65%;
+    left: 67%;
     width: 170px;
     height: 175px;
 	transition: opacity ease 1s 3.5s;
@@ -87,7 +91,7 @@ body{
 .logo5{
 	position: absolute;
 	opacity: 0;
-	top: 460px;
+	top: 474px;
     left: 33%;
     width: 185px;
     height: 185px;
@@ -98,7 +102,7 @@ body{
 	position: absolute;
 	opacity: 0;
 	top: 341px;
-    left: 62%;
+    left: 64%;
     width: 160px;
     height: 185px;
 	transition: opacity ease 1s 3s;
@@ -118,7 +122,7 @@ body{
 	}
 @keyframes logo-ania{
 		0% {
-		    transform: translate(0px,20px);
+		    transform: translate(0px,10px);
 		}
 		100% {
 		    transform: translate(0px,0px);
@@ -146,7 +150,7 @@ body{
 .content-right img{
 	position: absolute;
 }
-.locale{}
+
 .icon-locale{
 	text-align: center;
     width: 28px;
@@ -161,12 +165,14 @@ body{
 	padding: 5px;
 	float: right;
 	color: white;
+	font-size: 1.2em;
 }
 .hn{
-	position: absolute;
-	top: 95px;
-	left: 35%;
-	z-index: 5;
+    position: absolute;
+    top: 94px;
+    left: 35%;
+    z-index: 5;
+    padding-bottom: 13px;
 }
 .hn .locale-text{
 	color: blue;
@@ -174,14 +180,139 @@ body{
 }
 .dn{
 	position: absolute;
-	top: 300px;
+    top: 280px;
     left: 67%;
-	z-index: 5;
+    z-index: 5;
+    padding-top: 20px;
 }
 .hcm{
-	position: absolute;
-	top: 478px;
+    position: absolute;
+    top: 458px;
     left: 50%;
-	z-index: 5;
-	width: 145px;
+    padding-top: 20px;
+    z-index: 5;
+    width: 165px;
+}
+.container-popover{
+	width: 75%;
+	height: 250px;
+    position: absolute;
+    z-index: 20;
+    background: #fff;
+    border: 1px solid #d4d5d5;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #03325d;
+    
+}
+.first{
+	display: none;
+	visibility: hidden;
+    margin-top: 135px;
+    margin-left: 3%;
+}
+.second{
+	display: none;
+	visibility: hidden;
+    margin-top: 36px;
+    margin-left: 34%;
+}
+.third{
+	display: none;
+	visibility: hidden;
+	margin-top: 210px;
+    margin-left: 17%;
+}
+.triangle_border{
+	position: absolute;
+	width: 20px;
+	height: 13px;
+	top: -13px;
+	margin-left: 44.5%;
+	background: url(../IMG/boder-top.png) no-repeat;
+}
+.text{
+	width: 100px;
+	margin: 15px 90px;
+	font-size: 20px;
+	color: #0558a4;
+	line-height: 110%;
+}
+.second>.ppover>ul>li.text{
+	margin: 15px 80px !important;
+}
+.second>.ppover>.triangle_border{
+	background: url(../IMG/boder-bottom.png) no-repeat;
+	top: 248px !important;
+}
+.third>.ppover>ul>li.text{
+	width: 130px !important;
+	margin: 15px 63px !important;
+}
+.third>.ppover>.triangle_border{
+	background: url(../IMG/boder-bottom.png) no-repeat;
+	top: 248px !important;
+}
+.ppover img{
+	position: absolute;
+    border: 1px solid #e2e2e2;
+    width: 89%;
+    top: 50px;
+    left: 13px;
+}
+.view-more{
+	position: absolute;
+    font-size: 16px;
+    color: #fff;
+    bottom: 20px;
+    left: 37px;
+}
+.view-more:hover{
+	opacity: 0.8;
+}
+.view-more>div{
+    width: 190%;
+    margin: 10px 0 0 16.7%;
+    background: #0558a4;
+    border-radius: 4px;
+    text-align: center;
+    padding: 12px 0 12px 0;
+    cursor: pointer;
+}
+.locale:hover{
+	cursor: pointer;
+}
+.think1{
+	position: absolute;
+    top: -60px;
+    left: -7px;
+    width: 124px;
+    height: 84px;
+}
+.think2{
+	position: absolute;
+    top: -52px;
+    left: -20px;
+    width: 124px;
+    height: 84px;
+}
+.think3{
+	position: absolute;
+    top: -72px;
+    left: 102px;
+    width: 162px;
+    height: 87px;
+}
+.think4{
+	position: absolute;
+    top: -16px;
+    left: -71px;
+    width: 124px;
+    height: 84px;
+}
+.think5{
+	position: absolute;
+    top: -60px;
+    left: 87px;
+    width: 124px;
+    height: 84px;
 }
