--- a/Du_anTN/CSS/start-page.css
+++ b/Du_anTN/CSS/start-page.css
@@ -18,6 +18,10 @@ body{
 ul li{
 	list-style-type: none;
 }
+button{
+	background-color: transparent;
+	border: none;
+}
 p{display: inline-block;}
 .clear{clear: both;}
 .wrapper{
@@ -268,7 +272,7 @@ p{display: inline-block;}
     left: 37px;
 }
 .view-more:hover{
-	opacity: 0.8;
+	opacity: 0.6;
 }
 .view-more>div{
     width: 190%;
@@ -331,7 +335,51 @@ p{display: inline-block;}
 }
 .ico{
 	margin-bottom: 20px;
+	cursor: pointer;
 }
+.ico:hover {transform: scale(1.2);opacity: 0.8}
 .ico img{
 	width: 70px;
 }
+.wave{
+	position: absolute;
+	display: block;
+	z-index: -1;
+	width: 28px;
+	height: 28px;
+	border-radius: 50%;
+	opacity:0;
+	background-color: #3061AE;
+	visibility: hidden;
+	transition: opacity .3s, transform .3s, visibility 0s 1s;
+	animation: wave-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
+}
+.wave-hn{
+	top: 0px;
+    left: 0%;
+}
+.wave-dn{
+	top: 21px;
+	left: 0%;
+}
+.wave-hcm{
+	top: 21px;
+	left: 0%;
+}
+@keyframes wave-animation{
+		0% {
+			opacity:1;
+    		transform: scale(1);
+    		visibility: visible;
+		}
+ 		 50% {
+			opacity:0;
+		    transform: scale(1.8);
+		    visibility: hidden;
+		}
+		100% {
+			opacity:0;
+	    	transform: scale(1.8);
+	    	visibility: visible;
+		}
+	}
