--- a/Du_anTN/CSS/search-nearby.css
+++ b/Du_anTN/CSS/search-nearby.css
@@ -17,3 +17,38 @@
   width: 58%;
   float: right;
 }
+.content-right-locale p{
+	text-align: justify;
+}
+.map-search{
+	width: 99%;
+	border: 2px solid #4FB748;
+	padding: 5px;
+	border-radius: 5px;
+}
+#mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > p:nth-child(1){
+	color: red;
+}
+#mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > p:nth-child(2){
+	color: #66A400;
+}
+#mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > button{
+	display: inline-block;
+	border-radius: 5px;
+    background: linear-gradient(to left, #64a9de 50%,#288AD6 50%);
+    background-size: 200% 100%;
+    transition: background-position 150ms ease;
+    background-position: left bottom;
+    color: white;
+    margin-top: 2px;
+    width: 100px;
+    height: 25px;
+}
+#mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > button:hover{
+		cursor: pointer;
+		color: red;
+		background-position: right top;
+	}
+.btn-direction{
+	margin-left: 5px;
+}
