--- a/Du_anTN/CSS/search-nearby.css
+++ b/Du_anTN/CSS/search-nearby.css
@@ -27,9 +27,9 @@
 	border-radius: 5px;
 }
 #mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > p:nth-child(1){
-	color: red;
+	color: red !important;
 }
-#mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > p:nth-child(2){
+#mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > p{
 	color: #66A400;
 }
 #mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > button{
