--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -448,8 +448,12 @@ i.fa.fa-bars{
 		display: none;
 	}
 	/*********** CSS Content**********/
+	.container-content{
+		width: 74%;
+		float: left;
+	}
 	.content{
-		width: 99%;
+		width: 100%;
 		padding: 5px;
 		background-color: white;
 		border-radius: 5px;
@@ -796,8 +800,8 @@ i.fa.fa-bars{
 		margin-right: auto !important;
 	}
 	.wrap-content{
-		width: 75%;
-		float: left;
+		width: 100%;
+		
 	}
 	.content{border: 2px solid #4FB748;}
 	
