--- a/Du_anTN/CSS/post.css
+++ b/Du_anTN/CSS/post.css
@@ -79,7 +79,7 @@ ul li span.title{
 }
 /******CSS Map**********/
  #map{
- 	width: 810px;
+ 	width: 100%;
  	height: 450px;
  	margin-top: 91px;
  }
@@ -125,7 +125,6 @@ ul li span.title{
       }
       #pac-input {
         background-color: #fff;
-        font-family: "Helvetica Neue";
         font-size: 15px;
         position: absolute !important;
         top: 22px !important;
