--- a/Du_anTN/CSS/start-page.css
+++ b/Du_anTN/CSS/start-page.css
@@ -3,11 +3,11 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-	-moz-box-sizing:border-box;
-	-webkit-box-sizing:border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 body{
-	background: url(../IMG/bg-img.jpg) repeat-y center center;
+	background: url(../IMG/bg-img.jpg) repeat center center;
 	width: 100%;
 	height: 100%;
 	margin: 0 auto;
