--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -24,6 +24,12 @@ p{margin: 0 !important;}
 ol, ul{
 	list-style: none;
 }
+.wrapper-container{
+		position: relative;
+		width: 100%;
+		border-top: 2px solid #1D5D6F;
+		background-color: #fff;
+	}
 .container{
 	position: relative;
 	width: 100%;
@@ -221,6 +227,7 @@ height: 145px;}
 div.wrap-content > div > form > button{
 	width: 10%;
 }
+.content{border: 2px solid #4FB748;}
 /*option form thong tin ca nhan*/
 .login{width: 540px !important}
 #myModal > div > div > div.modal-body > form > div:nth-child(2) > span{
@@ -593,7 +600,6 @@ i.fa.fa-bars{
 		max-width: 40%;
 		margin-left: 60%;
 	}
-	.wrapper-container{min-height: 1000px;}
 	.wrap-content{
 		width: 100%;
 		position: relative;
