--- a/Du_anTN/CSS/post.css
+++ b/Du_anTN/CSS/post.css
@@ -12,6 +12,7 @@
 .group-form{
 	border: 2px solid #00914E;
 	margin-bottom: 20px;
+  border-radius: 7px;
 }
 .huongdan{padding: 10px;}
 .huongdan ul li{
@@ -55,8 +56,13 @@ h3{
 	margin: 0 !important;
 	font-size: 18px !important;
 }
-.group-form-body div.form-group label{
-	color: #E74C3C;
+.group-form-body .form-group label{
+	color: #044880;;
+}
+.group-form-body .form-group {
+  margin-top: 10px;
+  margin-left: 10px;
+  position: relative;
 }
 #files-list .file-detail{
     padding: 10px;
@@ -81,7 +87,7 @@ ul li span.title{
  #map{
  	width: 100%;
  	height: 450px;
- 	margin-top: 91px;
+ 	margin-top: 145px;
  }
  #description {
     font-family: Roboto;
@@ -130,13 +136,12 @@ ul li span.title{
         top: 22px !important;
         left: 0px !important;
         text-overflow: ellipsis;
-        width: 450px;
-		color: #555;
-	    background-image: none;
-	    border: 1px solid #ccc;
-	    border-radius: 4px;
-	    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-	    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  		  color: #555;
+  	    background-image: none;
+  	    border: 1px solid #ccc;
+  	    border-radius: 4px;
+  	    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  	    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
       }
       #pac-input:focus {
         border-color: #4d90fe;
