--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -32,8 +32,8 @@ ol, ul{
 	}
 .container{
 	position: relative;
-	width: 100%;
-	padding: 0 2px !important;
+	width: 100% !important;
+	padding: 0 !important;
 	background-color: white;
 }
 
@@ -44,6 +44,16 @@ ol, ul{
 	background-position: center center;
 	height: 150px;
 	display: none;
+}
+.banner-mobile{
+	height: 70px;
+}
+.banner-mobile>img:nth-child(1){
+	height: 70px;
+}
+.form-acc{
+	float: right;
+	width: 32%;
 }
 .face{
 	font-size: 1.6em;
@@ -57,15 +67,18 @@ ol, ul{
 .face2{display: none}
 .clear{ clear: both;}
 /*********** CSS Form đăng nhập screen-320 ************/
-.sign button{
+.sign-mobile{
+	position: relative;
+}
+.sign-mobile button{
+	padding: 0 !important;
 	border: none;
 	background-color: #E74C3C;
-	position: absolute;
 	margin-top: 1px;
 	color: white;
 	height: 25px;
 	width: 100px;
-	font-size: 17px !important;
+	font-size: 13px !important;
 }
 .btn .btn-info .btn-lg{
 	top: 0px;
@@ -246,7 +259,6 @@ input[type=text], input[type=password], input[type=email] {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-
 button {
     background-color: #4CAF50;
     color: white;
@@ -255,37 +267,31 @@ button {
     cursor: pointer;
     width: 100%;
 }
-
 button:hover {
     opacity: 0.8;
 }
-
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
 }
-
 .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
 }
-
 .container {
     padding: 16px;
 }
-
 span.psw {
     float: right;
     padding-top: 16px;
 }
 
-
 /************* Menu cho mobile*********/
 .menu-1024{display: none;}
 .menu-mobile{
 	background-color:#004824;
-	padding: 5px 0 5px 5px;
+	padding: 5px 0 5px 0px;
 }
 .menu-mobile p{
 	text-align: center;
@@ -297,22 +303,24 @@ span.psw {
 	margin: 0;
 }
 .item-mobile{
-	width: 20%;
+	width: 29%;
 	position: relative;
 	color: white;
 	float: left;
 }
-.item-mobile:nth-child(5){
+.item-mobile:nth-child(4){
 	padding-top: 1px;
 	padding-right: 0;
 	z-index: 2;
+	width: 6% !important;
 }
-.item-mobile:nth-child(6){
+.item-mobile:nth-child(5){
 	height: 30px;
+	width: 6% !important;
 	opacity: 0;
 	position: absolute;
 	top: 0px;
-	left: 87.5%;
+	left: 90.5%;
 	transition: all 1s ease;
 	z-index: 1;
 }
@@ -644,6 +652,9 @@ i.fa.fa-bars{
 		width: 74%;
 		float: left;
 	}
+	.banner-mobile{
+		display: none;
+	}
 	.wrapper-container{
 		position: relative;
 		margin-top: 480px;
@@ -687,7 +698,6 @@ i.fa.fa-bars{
 	}
 	.list-text:hover{
 		cursor: pointer;
-		transform: 
 	}
 	.list-text:active .img-item{
 		transform: scale(1.3);
@@ -951,6 +961,7 @@ i.fa.fa-bars{
 		width: 25%;
 	}
 	.sign button{
+		border: none;
 		position: static;
 		border-radius: 5px;
 		background-color: #E74C3C;
