--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -29,17 +29,30 @@ ol, ul{
 		width: 100%;
 		border-top: 2px solid #1D5D6F;
 		background-color: #fff;
-	}
+}
 .container{
 	position: relative;
 	width: 100% !important;
 	padding: 0 !important;
 	background-color: white;
 }
+.icon-nav{
+	width: 100%;
+	margin: 10px 0;
+	color: #337ab7;
+	background-color: #F8F8F8;
+	padding: 10px 0;
+}
+.icon-nav a{
+	display: inline-block;
+}
+.icon-nav a:hover{
+	color: #E74C3C;
+}
 .back-top img{
 	width: 50px;
 	position: fixed;
-	top: 50%;
+	bottom: 1%;
 	right: 20px;
 	z-index: 123;
 	cursor: pointer;
@@ -1077,13 +1090,28 @@ i.fa.fa-bars{
 		border-top: none;
 	}
 	.new-item{
-		margin-bottom: 10px;
-		background-color: white;
+		margin-bottom: 2px;
+		background-color: #F8F8F8;
 		color: black;
 		padding: 5px;
 		font-size: 0.9em;
 		text-align: justify;
 		border-bottom: 2px solid white;
+	}
+	.new-item .news-img{
+		width: 25%;
+		float: left;
+	}
+	.news-img img{
+		width: 100%;
+		height: 75px;
+		border-radius:50%;
+	}
+	.new-item .news-detail{
+		color: #039be5;
+		width: 73%;
+		margin-left: 5px;
+		float: right;
 	}
 	/************* CSS content desktop *********/
 	.image:hover .icon-p{display: block;}
