--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -153,7 +153,6 @@ ol, ul{
 		border-radius: 5px;
 		font-size: 16px;
 	}
-	
 }
 
 /*option tab support*/
@@ -480,7 +479,8 @@ i.fa.fa-bars{
 	.row{
 		display: flex;
 		flex-direction: column;
-		padding-left:14px; 
+		padding-left:14px;
+		margin: 0 !important;
 	}
 	.select{
 		width: 90%;
@@ -490,7 +490,7 @@ i.fa.fa-bars{
 		margin: 0 0 15px 8px;
 	}
 	.icon-s{
-		margin-left: 15px;
+		margin-left: 22px;
 		padding: 8px;
 		display: inline-block;
 		background: linear-gradient(to left, #64a9de 50%,#288AD6 50%);
@@ -932,7 +932,6 @@ i.fa.fa-bars{
 	}
 	.menu-1024{
 		padding-top: 12px;
-		padding-left: 10px;
 		margin: 0;
 		background-color: white;
 	}
@@ -1104,7 +1103,7 @@ i.fa.fa-bars{
 	}
 	.news-img img{
 		width: 100%;
-		height: 75px;
+		height: 70px;
 		border-radius:50%;
 	}
 	.new-item .news-detail{
