--- a/Du_anTN/CSS/post.css
+++ b/Du_anTN/CSS/post.css
@@ -57,7 +57,8 @@ h3{
 	font-size: 18px !important;
 }
 .group-form-body .form-group label{
-	color: #044880;;
+	color: #044880;
+  font-size: 0.9em;
 }
 .group-form-body .form-group {
   margin-top: 10px;
